apps/shop/frontend/k8s/overlays/non-prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop-frontend
spec:
  template:
    spec:
      containers:
        - name: server
