apps/shop/frontend/k8s/overlays/non-prod/destrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: shop-frontend-dev
spec:
  host: shop-frontend.shop-frontend.svc.cluster.local
  subsets:
    - name: shop-frontend-dev
      labels:
        app: shop-frontend
        env: dev
      trafficPolicy:
        loadBalancer:
          simple: ROUND_ROBIN
    - name: shop-frontend-dev-d1a
      labels:
        app: shop-frontend
        env: dev
        deploy.cloud.google.com/target-id: d1a
      trafficPolicy:
        loadBalancer:
          simple: ROUND_ROBIN
    - name: shop-frontend-dev-d1b
      labels:
        app: shop-frontend
        env: dev
        deploy.cloud.google.com/target-id: d1b
      trafficPolicy:
        loadBalancer:
          simple: ROUND_ROBIN
