apps/shop/frontend/k8s/overlays/non-prod/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: shop-frontend-dev
spec:
  hosts:
  - shop-frontend
  http:
  - match:
    - sourceLabels:
        app: shop-frontend
        env: dev
    route:
    - destination:
        host: shop-frontend
        subset: shop-frontend-dev
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
    name: dev-shop-frontend-virtualservice-external
spec:
    hosts:
    - "DEV_SHOP_APP_NAME.endpoints.PROJECT_ID.cloud.goog"
    gateways:
    - asm-gateways/asm-ingress-gateway
    http:
    - route:
        - destination:
            host: shop-frontend
            port:
              number: 80
            subset: shop-frontend-dev
